--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -1,5 +1,5 @@
 .banner{
-    background-image: url("../img/foto1.jpg");
+    background-image: url("../img/imagen3.jpg");
     background-position: top center;
     background-size: cover;
     background-attachment: fixed;
@@ -7,5 +7,5 @@
 }
 
 .menu{
-    background-color: cadetblue;
+    background-color: rgb(0, 0, 0);
 }
